--- a/index.html
+++ b/index.html
@@ -2,78 +2,65 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>MM2 Coinflip</title>
+<title>Coinflip Demo</title>
 <script src="https://cdn.pubnub.com/sdk/javascript/pubnub.7.6.0.min.js"></script>
 
 <style>
 body{margin:0;background:#020617;color:white;font-family:Arial}
 #top{height:60px;border-bottom:1px solid #1e293b;display:flex;justify-content:space-between;align-items:center;padding:0 20px}
 #container{display:flex;height:calc(100vh - 60px)}
-#main{width:100%;padding:20px}
+#chat{width:30%;border-right:1px solid #1e293b;display:flex;flex-direction:column}
+#messages{flex:1;overflow:auto;padding:10px}
+#chat input{padding:10px;border:none}
+#main{width:70%;padding:20px}
 .match{border:1px solid #1e293b;padding:10px;border-radius:8px;margin-bottom:10px}
 button{background:#2563eb;color:white;border:none;padding:6px 10px;border-radius:6px;cursor:pointer}
+button.red{background:#dc2626}
 
-.modal-bg{
-  position:fixed;inset:0;
-  background:rgba(0,0,0,.7);
-  display:none;
-  align-items:center;
-  justify-content:center;
-}
-.modal{
-  background:#020617;
-  border:1px solid #1e293b;
-  border-radius:10px;
-  padding:20px;
-  width:420px;
-}
+.modal-bg{position:fixed;inset:0;background:rgba(0,0,0,.7);display:none;align-items:center;justify-content:center}
+.modal{background:#020617;border:1px solid #1e293b;border-radius:10px;padding:20px;width:300px}
 
-.grid{
-  display:grid;
-  grid-template-columns:repeat(4,1fr);
-  gap:10px;
-}
-.item{
-  border:1px solid #1e293b;
-  padding:6px;
-  border-radius:6px;
-  text-align:center;
-  cursor:pointer;
-}
-.item.selected{background:#1e293b}
-
-#coinflip{
-  margin-top:30px;
-  text-align:center;
-}
 .coin{
-  width:140px;height:140px;
-  border-radius:50%;
+  width:140px;height:140px;border-radius:50%;
   background:linear-gradient(145deg,#fde047,#eab308);
-  color:black;
-  font-size:48px;
-  display:flex;
-  align-items:center;
-  justify-content:center;
+  color:black;font-size:48px;
+  display:flex;align-items:center;justify-content:center;
   margin:auto;
-  animation:flip 2.5s cubic-bezier(.25,.8,.25,1);
+  animation:flip 2.5s ease-in-out;
 }
 @keyframes flip{
-  0%{transform:rotateY(0) scale(1)}
+  0%{transform:rotateY(0)}
   50%{transform:rotateY(720deg) scale(1.2)}
-  100%{transform:rotateY(1080deg) scale(1)}
+  100%{transform:rotateY(1080deg)}
 }
 </style>
 </head>
 
 <body>
 
+<!-- LOGIN -->
+<div id="loginBg" class="modal-bg" style="display:flex">
+  <div class="modal">
+    <h3>Login</h3>
+    <input id="loginName" placeholder="Username" style="width:100%;padding:8px">
+    <br><br>
+    <button onclick="login()">Login</button>
+  </div>
+</div>
+
 <div id="top">
-  <div id="user"></div>
-  <button onclick="openCreate()">Create Match</button>
+  <div id="userLabel"></div>
+  <div>
+    <button onclick="createMatch()">Create Match</button>
+    <button class="red" onclick="logout()">Logout</button>
+  </div>
 </div>
 
 <div id="container">
+  <div id="chat">
+    <div id="messages"></div>
+    <input id="chatInput" placeholder="Mesaj yaz...">
+  </div>
   <div id="main">
     <h2>Matches</h2>
     <div id="matches"></div>
@@ -81,141 +68,116 @@ button{background:#2563eb;color:white;border:none;padding:6px 10px;border-radius
   </div>
 </div>
 
-<!-- CREATE -->
-<div id="createBg" class="modal-bg">
-  <div class="modal">
-    <h3>Create Match</h3>
-    <div id="createItems" class="grid"></div>
-    <br>
-    <button onclick="side='H'">H</button>
-    <button onclick="side='T'">T</button>
-    <br><br>
-    <button onclick="createMatch()">Create</button>
-    <button onclick="closeCreate()">Cancel</button>
-  </div>
-</div>
-
-<!-- JOIN -->
-<div id="joinBg" class="modal-bg">
-  <div class="modal">
-    <h3>Join Match</h3>
-    <div id="joinItems" class="grid"></div>
-    <br>
-    <button onclick="confirmJoin()">Join</button>
-  </div>
-</div>
-
 <script>
-const pubnub=new PubNub({
- publishKey:"pub-c-59b96e01-f4ca-486b-bde1-e3160adbc839",
- subscribeKey:"sub-c-3f46e9b1-23c3-4f38-8370-50666a4f1e57",
- uuid:"u"+Math.random()
+/* PUBNUB */
+const pubnub = new PubNub({
+  publishKey: "pub-c-59b96e01-f4ca-486b-bde1-e3160adbc839",
+  subscribeKey: "sub-c-3f46e9b1-23c3-4f38-8370-50666a4f1e57",
+  uuid: "u" + Math.random()
 });
 
-let user=localStorage.getItem("user")||prompt("Username?");
-localStorage.setItem("user",user);
-document.getElementById("user").innerText=user;
+/* STATE */
+let user = localStorage.getItem("user");
+let matches = {};
 
-const ITEM={
- name:"Blossom",
- value:910,
- img:"https://supremevalues.com/media/mm2godlies/Blossom.png"
+/* LOGIN */
+if(user){
+  loginBg.style.display="none";
+  userLabel.innerText=user;
+}else{
+  top.style.display="none";
+  container.style.display="none";
+}
+
+function login(){
+  user = loginName.value.trim();
+  if(!user) return;
+  localStorage.setItem("user",user);
+  location.reload();
+}
+function logout(){
+  localStorage.clear();
+  location.reload();
+}
+
+/* SUBSCRIBE */
+pubnub.subscribe({channels:["chat","matches"]});
+
+/* LISTENER */
+pubnub.addListener({
+  message:e=>{
+    if(e.channel==="chat"){
+      messages.innerHTML += `<div><b>${e.message.u}:</b> ${e.message.t}</div>`;
+    }
+    if(e.channel==="matches"){
+      if(e.message.type==="create") matches[e.message.id]=e.message;
+      if(e.message.type==="remove") delete matches[e.message.id];
+      renderMatches();
+    }
+    if(e.channel.startsWith("match-")){
+      coinflip.innerHTML = `
+        <div class="coin">${e.message.r}</div>
+        <h2>${e.message.w} WON</h2>`;
+    }
+  }
+});
+
+/* HISTORY */
+pubnub.history({channel:"chat",count:50},(_,r)=>{
+  r.messages.forEach(m=>{
+    messages.innerHTML += `<div><b>${m.entry.u}:</b> ${m.entry.t}</div>`;
+  });
+});
+pubnub.history({channel:"matches",count:50},(_,r)=>{
+  r.messages.forEach(m=>{
+    if(m.entry.type==="create") matches[m.entry.id]=m.entry;
+    if(m.entry.type==="remove") delete matches[m.entry.id];
+  });
+  renderMatches();
+});
+
+/* CHAT SEND */
+chatInput.onkeypress=e=>{
+  if(e.key==="Enter"){
+    pubnub.publish({channel:"chat",message:{u:user,t:e.target.value}});
+    e.target.value="";
+  }
 };
 
-let wallet=JSON.parse(localStorage.getItem("wallet")||"null");
-if(!wallet){wallet={Blossom:20};saveWallet();}
-
-let matches={},side=null,selected=[],joinMatchId=null;
-
-function saveWallet(){localStorage.setItem("wallet",JSON.stringify(wallet));}
-
-pubnub.subscribe({channels:["matches"]});
-pubnub.addListener({
- message:e=>{
-  if(e.channel==="matches"){
-    if(e.message.type==="create")matches[e.message.id]=e.message;
-    if(e.message.type==="remove")delete matches[e.message.id];
-    render();
-  }
-  if(e.channel.startsWith("match-")){
-    playFlip(e.message.result,e.message.winner);
-  }
- }
-});
-
-function render(){
- matchesDiv.innerHTML="";
- Object.values(matches).forEach(m=>{
-  matchesDiv.innerHTML+=`
-  <div class="match">
-    ${m.creator} (${m.count} Blossom) - ${m.side}
-    <br><br>
-    <button onclick="openJoin(${m.id})">Join</button>
-  </div>`;
- });
-}
-
-function openCreate(){
- selected=[];side=null;
- createBg.style.display="flex";
- createItems.innerHTML="";
- for(let i=0;i<wallet.Blossom;i++){
-  const d=document.createElement("div");
-  d.className="item";
-  d.innerHTML=`<img src="${ITEM.img}" width="40"><br>Blossom`;
-  d.onclick=()=>d.classList.toggle("selected");
-  createItems.appendChild(d);
- }
-}
-function closeCreate(){createBg.style.display="none";}
-
+/* CREATE MATCH */
 function createMatch(){
- const count=document.querySelectorAll("#createItems .selected").length;
- if(!count||!side)return alert("Item & side seç");
- const id=Date.now();
- wallet.Blossom-=count;saveWallet();
- pubnub.publish({channel:"matches",message:{type:"create",id,creator:user,count,side}});
- closeCreate();
+  const id = Date.now();
+  pubnub.publish({
+    channel:"matches",
+    message:{type:"create",id,creator:user}
+  });
 }
 
-function openJoin(id){
- joinMatchId=id;
- joinBg.style.display="flex";
- joinItems.innerHTML="";
- for(let i=0;i<wallet.Blossom;i++){
-  const d=document.createElement("div");
-  d.className="item";
-  d.innerHTML=`<img src="${ITEM.img}" width="40"><br>Blossom`;
-  d.onclick=()=>d.classList.toggle("selected");
-  joinItems.appendChild(d);
- }
+/* RENDER MATCHES (HATA BURADAYDI → DÜZELTİLDİ) */
+function renderMatches(){
+  const box = document.getElementById("matches");
+  box.innerHTML="";
+  Object.values(matches).forEach(m=>{
+    box.innerHTML += `
+      <div class="match">
+        ${m.creator}
+        <br><br>
+        <button onclick="joinMatch(${m.id})">Join</button>
+      </div>`;
+  });
 }
 
-function confirmJoin(){
- const count=document.querySelectorAll("#joinItems .selected").length;
- if(!count)return alert("Item seç");
- wallet.Blossom-=count;saveWallet();
- joinBg.style.display="none";
-
- pubnub.subscribe({channels:["match-"+joinMatchId]});
- const res=Math.random()<.5?"H":"T";
- const winner=res===matches[joinMatchId].side?matches[joinMatchId].creator:user;
-
- if(winner===user)wallet.Blossom+=matches[joinMatchId].count+count;
- saveWallet();
-
- pubnub.publish({
-  channel:"match-"+joinMatchId,
-  message:{result:res,winner}
- });
- pubnub.publish({channel:"matches",message:{type:"remove",id:joinMatchId}});
-}
-
-function playFlip(r,w){
- coinflip.innerHTML=`
-  <div class="coin">${r}</div>
-  <h2>${w} WON</h2>`;
+/* JOIN */
+function joinMatch(id){
+  pubnub.subscribe({channels:["match-"+id]});
+  const r = Math.random()<0.5?"H":"T";
+  pubnub.publish({
+    channel:"match-"+id,
+    message:{r,w:user}
+  });
+  pubnub.publish({channel:"matches",message:{type:"remove",id}});
 }
 </script>
+
 </body>
 </html>
